# multistake

./: .cursorrules  .gitignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: publish-npm.yml
app/: .npmignore  README.md  example.ts  package.json
app/src/: index.ts  multistake.json  sdk.ts  types.ts
app/src/types/: multistake.ts
programs/multistake/: Cargo.toml
programs/multistake/src/: error.rs  lib.rs
programs/multistake/src/instructions/: add_token.rs  create_pool.rs  mod.rs  modify_weight.rs  remove_token.rs  stake.rs  unstake.rs
programs/multistake/src/state/: item.rs  liquidity.rs  mod.rs  pool.rs  swap.rs
tests/: pool_operations.ts  pool_setup.ts  pool_test.ts  sdk_test.ts  security_test.ts  stake_test.ts
web/: README.md  index.html  package.json  vite.config.ts
web/src/: App.css  App.tsx  main.ts  main.tsx
web/src/components/: MultiStakeDemo.tsx
